RESOLVED FIXED237762
[fast-cq] Unreviewed isInGPUProcess() fix after 248209@main
https://bugs.webkit.org/show_bug.cgi?id=237762
Summary [fast-cq] Unreviewed isInGPUProcess() fix after 248209@main
Zan Dobersek
Reported 2022-03-11 01:41:46 PST
Unreviewed isInGPUProcess() fix after 248209@main
Attachments
Patch (1.67 KB, patch)
2022-03-11 01:42 PST, Zan Dobersek
no flags
Patch (1.61 KB, patch)
2022-03-11 01:46 PST, Zan Dobersek
no flags
Patch (1.66 KB, patch)
2022-03-11 01:50 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2022-03-11 01:42:45 PST
Zan Dobersek
Comment 2 2022-03-11 01:46:34 PST
Zan Dobersek (Reviews)
Comment 3 2022-03-11 01:48:22 PST
(In reply to Zan Dobersek from comment #2) > Created attachment 454454 [details] > Patch Doesn't end up working because of the missing AuxiliaryProcessType::GPU enumerator value.
Zan Dobersek
Comment 4 2022-03-11 01:50:53 PST
EWS
Comment 5 2022-03-11 03:18:39 PST
Committed r291153 (248313@main): <https://commits.webkit.org/248313@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454456 [details].
Radar WebKit Bug Importer
Comment 6 2022-03-11 03:19:17 PST
Note You need to log in before you can comment on or make changes to this bug.