Unreviewed isInGPUProcess() fix after 248209@main https://bugs.webkit.org/show_bug.cgi?id=237762

Patch by Zan Dobersek <zdobersek@igalia.com> on 2022-03-11

* platform/RuntimeApplicationChecks.h:
(WebCore::isInGPUProcess): Define isInGPUProcess() in all cases but
return false if ENABLE_GPU_PROCESS is disabled.


Canonical link: https://commits.webkit.org/248313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291153 268f45cc-cd09-0410-ab3c-d52691b4dbfc